k8s/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
 type: NodePort
 ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30333
    protocol: TCP
 selector:
     app: prometheus
